fix: remove sidebar and align content to center in a container

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,33 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-/* body {
-  font-family: Arial, Helvetica, sans-serif;
-} */
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-
-  p,a,li,ul,span,div {
-    @apply text-sm
-  }
-
-  /* p, li {
-    @apply text-paragraph/60
-  } */
-
-  /* a {
-    @apply text-paragraph/80
-  } */
-
-  /* h1,h2,h3,h4,h5,h6 {
-    @apply text-heading/60
-  } */
-}
-
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -86,6 +59,7 @@
   }
 }
 
+
 @layer base {
   * {
     @apply border-border;
@@ -102,27 +76,3 @@
     rgba(108, 122, 137, 10)
   );
 }
-
-/* .underLine:hover {
-  background-image: linear-gradient(
-    rgba(209, 213, 219, 30),
-    rgba(209, 213, 219, 30)
-  );
-  background-size: 100% 1px;
-} */
-
-/* .bg-grainy {
-  z-index: -1;
-  position: fixed;
-  min-height: 100vh;
-  min-width: 100vw;
-  filter: contrast(180%) brightness(100%);
-  background-position: center;
-  background: linear-gradient(
-      150deg,
-      rgba(30, 2, 60, 0.5),
-      rgba(36, 54, 40, 1),
-      rgba(30, 2, 60, 0.6)
-    ),
-    url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='40' numOctaves='1' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-} */
